# xenia-linux-manager

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  capabilities_test.cjs  dump_data.py  electron.vite.config.ts  fix_caps.py  fix_csp.py  fix_fs_perms.py  fix_fs_perms_again.py  fix_fs_perms_final.py  fix_replace.py  index.html  orchun.txt  package-lock.json  package.json  patch_caps_dialog_fs.py  patch_csp.py  patch_lib.py  patch_lib_dialog.py  patch_profiles_materialize.py  patch_profiles_merge.py  patch_skill.py  patch_tauri_conf_scope.py  run.sh  test_fetch.py  tsconfig.node.json  update_artwork.py  vite.config.ts  vitest.config.ts  vitest.electron.config.ts  wipe_artwork.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
core/: Cargo.toml
design_handoff_aurora_dashboard/: README.md  Xenia Aurora.dc.html
electron/: README.md  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_ctx.rs  events.rs  lib.rs  main.rs  rpc.rs
src-tauri/src/commands/: jobs.rs  library.rs  mod.rs  patches.rs  profiles.rs  release.rs  saves.rs  settings.rs  shell.rs  xenia.rs
src-tauri/src/jobs/: events.rs  mod.rs  store.rs
src-tauri/src/patches/: deploy.rs  mod.rs  parser.rs  xenia_patches.rs
src-tauri/src/profiles/: materialize.rs  merge.rs  mod.rs  sources.rs  storage.rs
src-tauri/src/release/: mod.rs
src-tauri/src/saves/: archive.rs  import.rs  mod.rs  paths.rs  storage.rs
src-tauri/src/settings/: mod.rs  path_defaults.rs
src-tauri/src/xenia/: archive.rs  download.rs  install.rs  install_state.rs  lifecycle.rs  mod.rs  patch_cmd_test.py  patch_lifecycle.py  patch_test.py  releases.rs
src-tauri/tests/: sidecar_rpc.rs
(+276 files in other folders)
