[package]
name = "xenia-linux-manager"
version = "0.1.0"
description = "Xenia Xbox 360 Emulator Manager for Linux"
authors = ["you"]
edition = "2021"

[lib]
name = "xenia_linux_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs", "sync", "process", "macros", "rt"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
